==> Agueeva/bert100/rx63n/bert100/i2cmaster.c <==
#include <stdlib.h>
#include <string.h>
#include "i2cmaster.h"
#include "events.h"
#include "console.h"
#include "interpreter.h"
#include "hex.h"
#include "iodefine.h"
#include "atomic.h"
#include "timer.h"
#define BUS_NR(i2caddr) (((i2caddr) >> 12) & 0x3)
#define MAX_ACK_POLLS	(2)
#define PORT_SDA(val)	BMOD(3,PORT1.DR.BYTE,(val))
#define PORT_SCL(val)	BMOD(2,PORT1.DR.BYTE,(val))
#define STATUS_SDA	PORT1.PORT.BIT.B3
#define STATUS_SCL	PORT1.PORT.BIT.B2
#define DIR_SDA(val)	BMOD(3,PORT1.DDR.BYTE,(val))
#define DIR_SCL(val)	BMOD(2,PORT1.DDR.BYTE,(val))
#define T_HDSTA 600		// 0.6 uS
#define T_SUSTA 600		// 0.6 uS
#define T_SUSTO 600		// 0.6 uS
#define T_HIGH  600		// 0.6 uS
#define T_LOW   1300		// 1.3 uS
#define T_BUF   1300		// 1.3 uS
#define T_SUDAT 100		// 0.1 uS
#define T_HDSTA  4000		// 4.0 uS
#define T_SUSTA  4700		// 4.7 uS
#define T_SUSTO  4000		// 4.0 uS
#define T_HIGH   4000		// 4.0 uS
#define T_BUF    4700		// 4.7 uS
#define T_LOW    4700		// 4.7 uS
#define T_SUDAT  250		// 0.25 uS

static uint8_t
i2c_sync(I2C_Master *i2cm)
{
	uint8_t count;
	for (count = 0; count < 200; count++) {
		if (SCL_Read(i2cm)) {
			return 0;
		}
		i2c_ndelay(1000);
	}
	i2cm->stat_scl_blkd++;
	i2cm->stat_fail_location = __LINE__;
	return I2C_RESULT_SCL_BLKD;
}

static uint8_t
i2c_start(I2C_Master *i2cm)
{
	uint8_t ret;
	ret = i2c_sync(i2cm);
	if (ret != I2C_RESULT_OK) {
		return ret;
	}
	if ((ret = i2c_check_arb(i2cm)) != 0) {
		return ret;
	}
	SDA_Low(i2cm);
	i2c_ndelay(T_HDSTA);
	SCL_Low(i2cm);
	return 0;
}

static void
i2c_stop(I2C_Master *i2cm)
{
	SDA_Low(i2cm);
	i2c_ndelay(T_LOW);
	SCL_High(i2cm);
	i2c_sync(i2cm);
	i2c_ndelay(T_SUSTO);
	SDA_High(i2cm);
	i2c_ndelay(T_BUF);
	return;
}

static uint8_t
i2c_readb(I2C_Master *i2cm, int ack, uint8_t * b)
{
	int8_t i;
	uint8_t ret;
	uint8_t data = 0;
	SDA_High(i2cm);
	for (i = 7; i >= 0; i--) {
		i2c_ndelay(T_LOW);
		SCL_High(i2cm);
		ret = i2c_sync(i2cm);
		if (ret != I2C_RESULT_OK) {
			return ret;
		}
		i2c_ndelay(T_HIGH);
		if (SDA_Read(i2cm)) {
			data |= (1 << i);
		}
		SCL_Low(i2cm);
	}
	if (ack) {
		SDA_Low(i2cm);
	}
	i2c_ndelay(T_LOW);
	SCL_High(i2cm);
	i2c_sync(i2cm);
	i2c_ndelay(T_HIGH);
	*b = data;
	if (!ack) {
		ret = i2c_check_arb(i2cm);
		if (ret) {
			return ret;
		}
	}
	SCL_Low(i2cm);
	return 0;
}

static uint8_t
i2c_writeb(I2C_Master *i2cm, uint8_t value)
{
	int8_t i;
	uint8_t ret;
	uint8_t ack;
	for (i = 7; i >= 0; i--) {
		int8_t bit = (value >> i) & 1;
		if (bit) {
			SDA_High(i2cm);
		} else {
			SDA_Low(i2cm);
		}
		i2c_ndelay(T_LOW);
		SCL_High(i2cm);
		ret = i2c_sync(i2cm);
		if (ret != I2C_RESULT_OK) {
			return ret;
		}
		i2c_ndelay(T_HIGH);
		if (bit) {
			ret = i2c_check_arb(i2cm);
			if (ret != I2C_RESULT_OK) {
				return ret;
			}
		}
		SCL_Low(i2cm);
	}
	//i2c_ndelay(T_HDDAT); 
	SDA_High(i2cm);
	i2c_ndelay(T_LOW);
	SCL_High(i2cm);
	i2c_sync(i2cm);
	i2c_ndelay(T_HIGH);
	ack = !SDA_Read(i2cm);
	SCL_Low(i2cm);
	if (ack) {
		return 0;
	} else {
		i2cm->stat_no_ack++;
		i2cm->stat_fail_location = __LINE__;
		return I2C_RESULT_NO_ACK;
	}
}

static void
I2C_RiseTimes(uint8_t bus)
{
	I2C_Master *i2cm;
	uint8_t sda_count = 0;
	uint8_t scl_count = 0;
	uint8_t i;
	if(bus >= array_size(gI2cm)) {
		return;
	}
	i2cm = &gI2cm[bus];
	SDA_Low(i2cm);
	i2c_ndelay(5000);
	SDA_High(i2cm);
	if (SDA_Read(i2cm) == 0) {
		sda_count++;
	}
	if (SDA_Read(i2cm) == 0) {
		sda_count++;
	}
	if (SDA_Read(i2cm) == 0) {
		sda_count++;
	}
	if (SDA_Read(i2cm) == 0) {
		sda_count++;
	}
	if (SDA_Read(i2cm) == 0) {
		sda_count++;
	}
	if (SDA_Read(i2cm) == 0) {
		sda_count++;
	}
	if (SDA_Read(i2cm) == 0) {
		sda_count++;
	}
	for (i = 0; i < 100; i++) {
		if (SDA_Read(i2cm) == 0) {
			sda_count++;
		}
	}
	SCL_Low(i2cm);
	i2c_ndelay(5000);
	SCL_High(i2cm);
	if (SCL_Read(i2cm) == 0) {
		scl_count++;
	}
	if (SCL_Read(i2cm) == 0) {
		scl_count++;
	}
	if (SCL_Read(i2cm) == 0) {
		scl_count++;
	}
	if (SCL_Read(i2cm) == 0) {
		scl_count++;
	}
	if (SCL_Read(i2cm) == 0) {
		scl_count++;
	}
	if (SCL_Read(i2cm) == 0) {
		scl_count++;
	}
	if (SCL_Read(i2cm) == 0) {
		scl_count++;
	}
	for (i = 0; i < 100; i++) {
		if (SCL_Read(i2cm) == 0) {
			scl_count++;
		}
	}
	if ((sda_count > 1) || (scl_count > 1)) {
		Con_Printf("I2C-Bus %d Rise Time: SDA %d, SCL %d: ", bus, sda_count, scl_count);
	}
	if ((sda_count < 2) && (scl_count < 2)) {
		/* Con_Printf("Good\n"); */
	} else if ((sda_count < 3) && (scl_count < 3)) {
		Con_Printf("Critical\n");
	} else if ((sda_count < 4) && (scl_count < 4)) {
		Con_Printf("Bad\n");
	} else {
		Con_Printf("Very Bad\n");
	}
}

static int8_t
cmd_i2cstat(Interp * interp, uint8_t argc, char *argv[])
{
	I2C_Master *i2cm = &gI2cm[0];
	Interp_Printf_P(interp, "Reset Count  : %u\n", i2cm->stat_bus_reset);
	Interp_Printf_P(interp, "No Ack       : %u\n", i2cm->stat_no_ack);
	Interp_Printf_P(interp, "SCL-Blocked  : %u\n", i2cm->stat_scl_blkd);
	Interp_Printf_P(interp, "Arb Loss     : %u\n", i2cm->stat_arb_loss);
	Interp_Printf_P(interp, "Fail Location: %u\n", i2cm->stat_fail_location);
	return 0;
}

void
I2CM_Init(void)
{
	I2C_Master *i2cm0 = &gI2cm[0];
	I2C_Master *i2cm1 = &gI2cm[1];
	Init_Bus0();
	i2cm0->setSDA = SetSDA_Bus0;
	i2cm0->getSDA = GetSDA_Bus0;
	i2cm0->setSCL = SetSCL_Bus0;
	i2cm0->getSCL = GetSCL_Bus0;

	I2C_ResetBus(0);
	I2C_RiseTimes(0);

	Init_Bus1();
	i2cm1->setSDA = SetSDA_Bus1;
	i2cm1->getSDA = GetSDA_Bus1;
	i2cm1->setSCL = SetSCL_Bus1;
	i2cm1->getSCL = GetSCL_Bus1;

	I2C_ResetBus(1);
	I2C_RiseTimes(1);

	Interp_RegisterCmd(&i2crCmd);
	Interp_RegisterCmd(&i2cwCmd);
	Interp_RegisterCmd(&i2cstatCmd);
	Interp_RegisterCmd(&i2cscanCmd);
	Interp_RegisterCmd(&caldCmd);
	Interp_RegisterCmd(&i2cdelayCmd);
}
