==> Agueeva/bert100/atmega32a4/i2cmaster.c <==
#include <stdlib.h>
#include <string.h>
#include <util/delay.h>
#include <avr/io.h>
#include <avr/pgmspace.h>
#include "i2cmaster.h"
#include "events.h"
#include "console.h"
#include "interpreter.h"
#include "hex.h"
#include "timer.h"
#define TRAFIC_LEDS 1
#define USE_INTERNAL_PULLUP 0
#define MAX_ACK_POLLS	(3)
#define PORT_SDA	PORTE
#define PORT_SCL	PORTE
#define PINCTRL_SDA	PORTE.PIN0CTRL
#define PINCTRL_SCL	PORTE.PIN1CTRL
#define PIN_SDA 0
#define PIN_SCL 1
#define I2C_SPEED_FAST
#define T_HDSTA 600		// 0.6 uS
#define T_SUSTA 600		// 0.6 uS
#define T_SUSTO 600		// 0.6 uS
#define T_HIGH  600		// 0.6 uS
#define T_LOW   1300		// 1.3 uS
#define T_BUF   1300		// 1.3 uS
#define T_SUDAT 100		// 0.1 uS
#define T_HDSTA  4000		// 4.0 uS
#define T_SUSTA  4700		// 4.7 uS
#define T_SUSTO  4000		// 4.0 uS
#define T_HIGH   4000		// 4.0 uS
#define T_BUF    4700		// 4.7 uS
#define T_LOW    4700		// 4.7 uS
#define T_SUDAT  250		// 0.25 uS

static uint8_t i2c_sync(void)
{
	uint8_t count;
	for (count = 0; count < 255; count++) {
		if (GET_SCL()) {
			return 0;
		}
		_delay_us(2);
	}
	return I2C_RESULT_SCL_BLKD;
}

static uint8_t i2c_start(void)
{
	uint8_t ret;
	i2c_sync();
	if ((ret = i2c_check_arb()) != 0) {
		return ret;
	}
	SDA_L();
	i2c_ndelay(T_HDSTA);
	SCL_L();
	return 0;
}

static void i2c_stop(void)
{
	SDA_L();
	i2c_ndelay(T_LOW);
	SCL_H();
	i2c_sync();
	i2c_ndelay(T_SUSTO);
	SDA_H();
	i2c_ndelay(T_BUF);
	return;
}

static uint8_t i2c_readb(int ack, uint8_t * b)
{
	int8_t i;
	uint8_t ret;
	uint8_t data = 0;
	SDA_H();
	for (i = 7; i >= 0; i--) {
#if 0
		EV_EnterCritical();
		Con_Printf_P("Before Bit%d: %02x, TWDR %02x sda %d\n",i,data,TWDR,GET_SDA());
		EV_LeaveCritical();
#endif
		i2c_ndelay(T_LOW);
		SCL_H();

#if 0
		EV_EnterCritical();
		Con_Printf_P("Before after SCL_H %d: %02x, TWDR %02x sda %d\n",i,data,TWDR,GET_SDA());
		EV_LeaveCritical();
#endif

		i2c_sync();
		i2c_ndelay(T_HIGH);
		if (GET_SDA()) {
			data |= (1 << i);
		}
		SCL_L();
	}
#if 0
	EV_EnterCritical();
	Con_Printf_P("After Bit%d: %02x, TWDR %02x\n",i,data,TWDR);
	EV_LeaveCritical();
#endif
	if (ack) {
		SDA_L();
	}
	i2c_ndelay(T_LOW);
	SCL_H();
	i2c_sync();
	i2c_ndelay(T_HIGH);

#if 0
	EV_EnterCritical();
	Con_Printf_P("After Ack Bit%d: %02x, TWDR %02x\n",i,data,TWDR);
	EV_LeaveCritical();
#endif

	*b = data;
	if (!ack) {
		if ((ret = i2c_check_arb())) {
			return ret;
		}
	}
	SCL_L();
	return 0;
}

static uint8_t i2c_writeb(uint8_t value)
{
	int8_t i;
	uint8_t ret;
	uint8_t ack;
	for (i = 7; i >= 0; i--) {
		int8_t bit = (value >> i) & 1;
		if (bit) {
			SDA_H();
		} else {
			SDA_L();
		}
		i2c_ndelay(T_LOW);
		SCL_H();
		ret = i2c_sync();
		if (ret != I2C_RESULT_OK) {
			return ret;
		}
		i2c_ndelay(T_HIGH);
		if (bit) {
			ret = i2c_check_arb();
			if (ret != I2C_RESULT_OK) {
				return ret;
			}
		}
		SCL_L();
	}
	// i2c_ndelay(T_HDDAT); 
	SDA_H();
	i2c_ndelay(T_LOW);
	SCL_H();
	i2c_sync();
	i2c_ndelay(T_HIGH);
	ack = !GET_SDA();
	SCL_L();
	if (ack) {
		return 0;
	} else {
		return I2C_RESULT_NO_ACK;
	}
}

static void I2C_RiseTimes(void)
{
	uint8_t sda_count = 0;
	uint8_t scl_count = 0;
	uint8_t i;
	SDA_L();
	i2c_ndelay(5000);
	SDA_H();
	for (i = 100; i > 0; i--) {
		if (GET_SDA() == 0) {
			sda_count++;
		}
	}
	SCL_L();
	i2c_ndelay(5000);
	SCL_H();
	for (i = 100; i > 0; i--) {
		if (GET_SCL() == 0) {
			scl_count++;
		}
	}
	Con_Printf_P("I2C-Master Rise Time Check: SDA %d, SCL %d: ",sda_count,scl_count); 
	if ((sda_count <= 2) && (scl_count <= 2)) {
		Con_Printf_P("Good\n");
	} else if ((sda_count <= 3) && (scl_count <= 3)) {
		Con_Printf_P("Acceptable\n");
	} else if ((sda_count <= 4) && (scl_count <= 4)) {
		Con_Printf_P("Bad\n");
	} else {
		Con_Printf_P("Very Bad\n");
	}
}

void I2CM_Init(void)
{
	memset(&g_i2cm, 0, sizeof(g_i2cm));
	PINCTRL_SDA = PORT_OPC_WIREDANDPULL_gc;
	PINCTRL_SCL = PORT_OPC_WIREDANDPULL_gc;
	PORT_SDA.OUT |= (1 << PIN_SDA);
	PORT_SCL.OUT |= (1 << PIN_SCL);
	PORT_SDA.DIRSET = (1 << PIN_SDA);
	PORT_SCL.DIRSET = (1 << PIN_SCL);
#if 0
	while(1) {
	PINCTRL_SDA = PORT_OPC_TOTEM_gc;
	PINCTRL_SCL = PORT_OPC_TOTEM_gc;
	PORT_SDA.OUTCLR = (1 << PIN_SDA);
	PORT_SCL.OUTCLR = (1 << PIN_SCL);
	}
#endif
	i2c_reset();
	I2C_RiseTimes();
}

static int8_t cmd_i2cstat(Interp * interp, uint8_t argc, char *argv[])
{
	Interp_Printf_P(interp, "Reset Count  : %02x\n",g_i2cm.stat_bus_reset);
	Interp_Printf_P(interp, "Ackpoll Fail : %02x\n",g_i2cm.stat_ackpoll_fail);
	Interp_Printf_P(interp, "Fail Location: %04x\n",g_i2cm.stat_fail_location);
	return 0;
}
